[gd_scene load_steps=21 format=2]

[ext_resource path="res://Juego/Estaciones/AreaAtraccion.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/Estaciones/spaceStation_017.png" type="Texture" id=2]
[ext_resource path="res://Juego/Estaciones/spaceStation_024.png" type="Texture" id=3]
[ext_resource path="res://Juego/Estaciones/spaceStation_028.png" type="Texture" id=4]
[ext_resource path="res://Juego/Estaciones/spaceStation_029.png" type="Texture" id=5]
[ext_resource path="res://Juego/Estaciones/BaseEnemiga.gd" type="Script" id=6]
[ext_resource path="res://Juego/Explosiones/AreaColision.gd" type="Script" id=7]
[ext_resource path="res://Juego/Naves/EnemigoOrbital.tscn" type="PackedScene" id=8]
[ext_resource path="res://Juego/Estaciones/PosicionesSpawn.gd" type="Script" id=9]
[ext_resource path="res://Juego/Estaciones/RutaEnemigo2.tscn" type="PackedScene" id=10]
[ext_resource path="res://Juego/Estaciones/RutaEnemigo.tscn" type="PackedScene" id=11]
[ext_resource path="res://Juego/UI/BarraSalud.tscn" type="PackedScene" id=12]

[sub_resource type="CapsuleShape2D" id=4]
radius = 22.0
height = 18.0

[sub_resource type="CapsuleShape2D" id=5]
radius = 70.0
height = 358.0

[sub_resource type="CapsuleShape2D" id=6]
radius = 22.0
height = 74.0

[sub_resource type="Animation" id=1]
resource_name = "default"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AreaAtraccion:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "rotacion_anti_horario"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AreaAtraccion:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 360.0, -360.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "rotacion_horario"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AreaAtraccion:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.490196, 0, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.639216, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[node name="BaseEnemiga" type="Node2D" groups=["minimapa"]]
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}
orbital = ExtResource( 8 )
rutas = [ ExtResource( 11 ), ExtResource( 10 ) ]

[node name="Sprites" type="Node2D" parent="."]
position = Vector2( -4, 60 )
rotation = 6.28319

[node name="Sprite" type="Sprite" parent="Sprites"]
position = Vector2( 151, -99 )
rotation = -3.14159
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="Sprites"]
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="Sprites"]
position = Vector2( 4, -265 )
texture = ExtResource( 4 )

[node name="Sprite4" type="Sprite" parent="Sprites"]
position = Vector2( 4, -218 )
texture = ExtResource( 5 )

[node name="AreaColision" type="Area2D" parent="."]
position = Vector2( -4, 60 )
collision_layer = 32
collision_mask = 11
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( -103, -98 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( 4, -60 )
shape = SubResource( 5 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( 137, -98 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="AreaAtraccion" parent="." instance=ExtResource( 1 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default = SubResource( 1 )
anims/rotacion_anti_horario = SubResource( 2 )
anims/rotacion_horario = SubResource( 3 )

[node name="ImpactoSFX" type="AudioStreamPlayer2D" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="PosicionesSpawn" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="Norte" type="Position2D" parent="PosicionesSpawn"]
position = Vector2( 0, -432 )

[node name="Sur" type="Position2D" parent="PosicionesSpawn"]
position = Vector2( 0, 445 )

[node name="Este" type="Position2D" parent="PosicionesSpawn"]
position = Vector2( 449, 0 )

[node name="Oeste" type="Position2D" parent="PosicionesSpawn"]
position = Vector2( -453, 0 )

[node name="TimerSpawnerEnemigos" type="Timer" parent="."]

[node name="BarraSalud" parent="." instance=ExtResource( 12 )]
margin_left = -107.0
margin_top = -307.0
margin_right = 107.0
margin_bottom = -280.0
rect_rotation = 0.0
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
siempre_visible = true

[connection signal="body_entered" from="AreaColision" to="." method="_on_AreaColision_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="timeout" from="TimerSpawnerEnemigos" to="." method="_on_TimerSpawnerEnemigos_timeout"]
